<resources>
    <string name="app_name">OrderHR_NonInstant</string>

    //all lesson start times
    <string name="timeslot_1">08:30</string>
    <string name="timeslot_2">09:20</string>
    <string name="timeslot_3">10:30</string>
    <string name="timeslot_4">11:20</string>
    <string name="timeslot_5">12:10</string>
    <string name="timeslot_6">13:00</string>
    <string name="timeslot_7">13:50</string>
    <string name="timeslot_8">15:00</string>
    <string name="timeslot_9">15:50</string>
    <string name="timeslot_10">17:00</string>
    <string name="timeslot_11">17:50</string>
    <string name="timeslot_12">18:40</string>
    <string name="timeslot_13">19:30</string>
    <string name="timeslot_14">20:20</string>
    <string name="timeslot_15">21:10</string>

    //the two pauses in our schedule
    <string name="pause_one">10:10</string>
    <string name="pause_two">14:40</string>

    //days of our workweek
    <string name="day_mon">mon</string>
    <string name="day_tue">tue</string>
    <string name="day_wed">wed</string>
    <string name="day_thu">thu</string>
    <string name="day_fri">fri</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="greetMessage">Greetings, we notice this is your first time logging in. Please login with your google account below.</string>


    <!--Defuncts-->
    <string-array name="defunctypes">
        <item>broken</item>
        <item>missing</item>
        <item>software</item>
        <item>notype</item>
    </string-array>
    <string-array name="defunctfilters">
        <item>view all</item>
        <item>broken</item>
        <item>missing</item>
        <item>software</item>
        <item>notype</item>
    </string-array>
    <string name="title_activity_google_login">GoogleLoginActivity</string>
</resources>
