<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_scheduleLinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableLayout
        android:id="@+id/fragment_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="*"
        android:weightSum="6">

        <TableRow>

            <TextView
                android:id="@+id/day_2"
                android:layout_column="1"
                android:padding="10dp"
                android:text="@string/day_mon"
                android:textSize="24sp" />

            <TextView

                android:id="@+id/day_3"
                android:layout_column="2"
                android:padding="10dp"
                android:text="@string/day_tue"
                android:textSize="24sp" />

            <TextView

                android:id="@+id/day_4"
                android:layout_column="3"
                android:padding="10dp"
                android:text="@string/day_wed"
                android:textSize="24sp" />

            <TextView

                android:id="@+id/day_5"
                android:layout_column="4"
                android:padding="10dp"
                android:text="@string/day_thu"
                android:textSize="24sp" />

            <TextView

                android:id="@+id/day_6"
                android:layout_column="5"
                android:padding="10dp"
                android:text="@string/day_fri"
                android:textSize="24sp" />

        </TableRow>

        <TableRow android:id="@+id/timeslot_1">


            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_1" />

        </TableRow>

        <TableRow android:id="@+id/timeslot_2">


            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_2" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/timeslot_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_3" />
        </TableRow>

        <TableRow android:id="@+id/timeslot_4">

            <TextView
                android:padding="10dp"
                android:text="@string/timeslot_4" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/timeslot_5">

            <TextView
                android:padding="10dp"
                android:text="@string/timeslot_5" />

        </TableRow>

        <TableRow android:id="@+id/timeslot_6">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_6" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/timeslot_7">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_7" />
        </TableRow>


        <TableRow android:id="@+id/timeslot_8">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_8" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/timeslot_9">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_9" />
        </TableRow>

        <TableRow android:id="@+id/timeslot_10">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_10" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/timeslot_11">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_11" />
        </TableRow>

        <TableRow android:id="@+id/timeslot_12">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_12" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow android:id="@+id/timeslot_13">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_13" />
        </TableRow>

        <TableRow android:id="@+id/timeslot_14">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_14" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:id="@+id/timeslot_15"
            android:layout_width="match_parent"
            android:layout_height="36dp">

            <TextView
                android:layout_column="0"
                android:padding="10dp"
                android:text="@string/timeslot_15" />
        </TableRow>

    </TableLayout>
</LinearLayout>